--- a/ansible/inventory.ini
+++ b/ansible/inventory.ini
@@ -22,3 +22,4 @@ remaining_k3s_servers
 [k3s_agents]
 192.168.10.18 node_name=marcus-server ansible_port=2200
 192.168.10.33 node_name=hp-worker
+192.168.5.5 node_name=surface
