--- a/argocd/apps/media-server/maintainerr/manifests/sts.yaml
+++ b/argocd/apps/media-server/maintainerr/manifests/sts.yaml
@@ -16,6 +16,10 @@ spec:
       labels:
         app: maintainerr
     spec:
+      securityContext:
+        fsGroup: 1000        # Group ID for volume access
+        runAsUser: 1000      # User ID to run the container
+        runAsGroup: 1000     # Group ID for the process
       restartPolicy: Always
       containers:
         - image: ghcr.io/jorenn92/maintainerr:latest
