--- a/argocd/apps/media-server/wrapperr/manifests/http-route.yaml
+++ b/argocd/apps/media-server/wrapperr/manifests/http-route.yaml
@@ -1,6 +1,12 @@
 apiVersion: gateway.networking.k8s.io/v1
 kind: HTTPRoute
 metadata:
+  annotations:
+    gethomepage.dev/enabled: "true"
+    gethomepage.dev/name: Wrapperr
+    gethomepage.dev/icon: mdi-gift
+    gethomepage.dev/description: "Wrapperr is a website-based application for pulling Plex user statistics within a set timeframe."
+    gethomepage.dev/pod-selector: app=wrapperr
   labels:
     app.kubernetes.io/instance: wrapperr-app
   name: wrapperr-http-route
