--- a/argocd/apps/media-server/calibre/deploy.yaml
+++ b/argocd/apps/media-server/calibre/deploy.yaml
@@ -35,7 +35,7 @@ spec:
           resources:
             limits:
               cpu: 250m
-              memory: 500Mi
+              memory: 2Gi
             requests:
               cpu: 50m
               memory: 100Mi
