--- a/argocd/apps/infra/monitoring/opentelemetry/manifests/collector.yaml
+++ b/argocd/apps/infra/monitoring/opentelemetry/manifests/collector.yaml
@@ -17,9 +17,9 @@ spec:
       otlp:
         protocols: 
           grpc:
-            endpoint: ":4317"
+            endpoint: "0.0.0.0:4317"
           http:
-            endpoint: ":4318"
+            endpoint: "0.0.0.0:4318"
     exporters:
       otlphttp/victoriametrics:
         encoding: proto
