set pg atuin timeoutseconds

--- a/argocd/apps/atuin/manifests/sts.yaml
+++ b/argocd/apps/atuin/manifests/sts.yaml
@@ -45,6 +45,7 @@ spec:
                   [ "$Chksum" = '0' ] || exit 1
             initialDelaySeconds: 30
             periodSeconds: 10
+            timeoutSeconds: 5
           readinessProbe:
             exec:
               command:
