--- a/argocd/infra/storage/minio/kustomization.yaml
+++ b/argocd/infra/storage/minio/kustomization.yaml
@@ -3,7 +3,7 @@ kind: Kustomization
 
 resources:
   - manifests/vs.yaml
-  - manifests/ns.yaml
+#  - manifests/ns.yaml
   - manifests/http-route.yaml
   
 generators:
