--- a/argocd/infra/monitoring/vm-k8s-stack/values.yaml
+++ b/argocd/infra/monitoring/vm-k8s-stack/values.yaml
@@ -53,3 +53,5 @@ grafana:
     existingSecret: grafana-secrets
     userKey: grafana-admin-user
     passwordKey: grafana-admin-password
+  plugins:
+    - VictoriaLogs
