grafana vlogs plugin2

--- a/argocd/infra/monitoring/vm-k8s-stack/values.yaml
+++ b/argocd/infra/monitoring/vm-k8s-stack/values.yaml
@@ -54,4 +54,10 @@ grafana:
     userKey: grafana-admin-user
     passwordKey: grafana-admin-password
   plugins:
-    - VictoriaLogs
+    - victoriametrics-logs-datasource
+  # datasources:
+  #   datasources.yaml:
+  #     apiVersion: 1
+  #     datasources:
+  #     - name: VictoriaLogs
+  #       type: Victor
