--- a/argocd/infra/monitoring/vm-k8s-stack/values.yaml
+++ b/argocd/infra/monitoring/vm-k8s-stack/values.yaml
@@ -55,9 +55,10 @@ grafana:
     passwordKey: grafana-admin-password
   plugins:
     - victoriametrics-logs-datasource
-  # datasources:
-  #   datasources.yaml:
-  #     apiVersion: 1
-  #     datasources:
-  #     - name: VictoriaLogs
-  #       type: Victor
+  datasources:
+    datasources.yaml:
+      apiVersion: 1
+      datasources:
+      - name: VictoriaLogs
+        type: VictoriaLogs
+        url: http://victoria-logs-single-server.monitoring.svc.cluster.local:9428
