add vlogs datasource2

--- a/argocd/infra/monitoring/vm-k8s-stack/values.yaml
+++ b/argocd/infra/monitoring/vm-k8s-stack/values.yaml
@@ -60,5 +60,5 @@ grafana:
       apiVersion: 1
       datasources:
       - name: VictoriaLogs
-        type: VictoriaLogs
+        type: victoriametrics-logs-datasource
         url: http://victoria-logs-single-server.monitoring.svc.cluster.local:9428
