--- a/argocd/infra/monitoring/vm-k8s-stack/values.yaml
+++ b/argocd/infra/monitoring/vm-k8s-stack/values.yaml
@@ -63,7 +63,8 @@ grafana:
         type: victoriametrics-logs-datasource
         url: http://victoria-logs-single-server.monitoring.svc.cluster.local:9428
   dashboards:
-    victorialogs:
-      gnetId: 21550
-      revision: 1
-      datasource: VictoriaLogs
+    default:
+      victorialogs:
+        gnetId: 21550
+        revision: 1
+        datasource: VictoriaLogs
