add s3 bucket name

--- a/argocd/nextcloud/manifests/secrets.yaml
+++ b/argocd/nextcloud/manifests/secrets.yaml
@@ -12,16 +12,13 @@ stringData:
     s3-host: ENC[AES256_GCM,data:ZV8nhOdCR6Lj5skEWjyD0TU=,iv:9b95rC+nC1ehZsyeLW6528LaARCrACf7jn6S8CKXnfc=,tag:KfZqTAR1ut2UD53Q5DMAxA==,type:str]
     s3-access-key: ENC[AES256_GCM,data:z42o7O8no/TjKmuh8iEef2WJSeM=,iv:9k1CstuISKBysyzcCefQLxgHK2SbW6MPTcc69be5KW4=,tag:MLy8WUuRvtXraX1nhKxHhg==,type:str]
     s3-secret-key: ENC[AES256_GCM,data:oxmluRoyaU6VyYgxKZ3QYrw0qzfywu0HFctWEvd3S1pqJ87e0095+g==,iv:8rw1TlTa8vharu68VO2Fsmbgq8FQpPxlDQcN7uIVgKw=,tag:Ko0BLv5SI2Fd/L7rDexW9w==,type:str]
+    s3-bucket: ENC[AES256_GCM,data:fqALVJJYcTJN,iv:Z49d5BsJBgq4eDiZRuWhYcl3MoEGfJ+SYr4bIKi01Ig=,tag:aGNPIZ6F42OMluKRfdsg9A==,type:str]
     NEXTCLOUD_ADMIN_USER: ENC[AES256_GCM,data:GbvF4FnB,iv:YYPkPVs5jr0s5/sE4nFBR0Uo6fwR0JXY2JFMKGBaU0U=,tag:9wbh2Z6pdLH1ybNxCthvnQ==,type:str]
     NEXTCLOUD_ADMIN_PASSWORD: ENC[AES256_GCM,data:5uQw25o9j0RkK7NI,iv:xPkVskBpv8D+Mr00ZzTrbBCB1f7/VvgN8bmu0y5qGqM=,tag:pwEwkOObJHXjTUxOfmXYnw==,type:str]
     SMTP_PASSWORD: ENC[AES256_GCM,data:IxD8Wdsf+nDDBMw+4/e6+w==,iv:/6pKtS8mZUCWsPV1A1ipRqsMFfRliZp0Ke8BIKdeVQI=,tag:mt7Ks0McIy1/vXXnVz2gGg==,type:str]
     SMTP_HOST: ENC[AES256_GCM,data:QuhGzO7Z6Gb1geLLIyc=,iv:fHMM8JcjBgix6Zsd+UzJyrLKuoRzASfoz/IX4ErRdJc=,tag:IWjnlmo5YfF7PIGqh0kmlQ==,type:str]
     SMTP_NAME: ENC[AES256_GCM,data:fAXahhTnOVK9Rl8rD0s=,iv:+FtR4mfQcFlGslcOXnfN74Qgci5/F/HVDqa73Fls6Mk=,tag:queZhfF2Jlvu81uVa+5GKA==,type:str]
 sops:
-    kms: []
-    gcp_kms: []
-    azure_kv: []
-    hc_vault: []
     age:
         - recipient: age1fd6r86ze2kzv9fey9y0jx47uekpkjsat76l2t6uesfhjpx7463cqtawww5
           enc: |
@@ -32,8 +29,7 @@ sops:
             NE40enY1a3NZbVljYmpyNDRFSUZ5RTAKZZhEGkeVjJNT+kbv7xyxePum1RfP1OUw
             +RgCoroHJyrxhmPCmoG09BcR4GhWK6pvkXel+qronUrgHNq2BRydag==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2025-03-18T02:12:23Z"
-    mac: ENC[AES256_GCM,data:IZPqFWt+SplKkdwbpLZIIrro1kgJDbY4epnTc4xFp2nCfqxquB49ICDXpuMeA47rCFmulKhXd8Lx/0HnW7nKlroyrn5Dab8z+QZtR92WMeTn1ATP9adhFNBVTYC5sXCXPkIumR6USFvQbL3o5rVa8LiNs4dOPF+oH1u0FcjN97g=,iv:MC5u9IeuZau2SUoV3GbNxcMmkvAs7xCqWXiT4XCn6z8=,tag:EJkIah0q3a09YU/eh7zmbg==,type:str]
-    pgp: []
+    lastmodified: "2025-05-13T22:03:46Z"
+    mac: ENC[AES256_GCM,data:WG7oxNFuXzvmtzGfq0c9i73GZ0H7K8wfdj3UBf+nO9dCdoq7JVhS2ZfO+dG/X/+yhF8hq30JJxsUa1NMHN0SAoboX4wnyXjE+CtPqMozqQO10N5O7v4Pw/UBzrlEm7LIf7gWBKfW9PdE5VV4nIXNjWXF/YmKjVI92u3nZFWtXFI=,iv:y85GzMOkhx9I/Sx3iIrJYtNQJ0SaDJIo6laHhMSw9ho=,tag:i0rjxFHmMpHzknsnxQ31Cg==,type:str]
     unencrypted_regex: ^(apiVersion|metadata|kind|type)$
-    version: 3.9.4
+    version: 3.10.2
