--- a/argocd/infra/monitoring/vm-k8s-stack/kustomization.yaml
+++ b/argocd/infra/monitoring/vm-k8s-stack/kustomization.yaml
@@ -3,21 +3,21 @@ kind: Kustomization
 
 resources:
   - ./manifests/http-route.yaml
-  - ./manifests/dashboards/power-dash.yaml
-  - ./manifests/dashboards/istio-dash.yaml
-  - ./manifests/vmscrape/homeassistant.yaml
-  - ./manifests/vmscrape/haproxy.yaml
-  - ./manifests/vmscrape/netdata.yaml
-  - ./manifests/vmscrape/kuma.yaml
+  # - ./manifests/dashboards/power-dash.yaml
+  # - ./manifests/dashboards/istio-dash.yaml
+  # - ./manifests/vmscrape/homeassistant.yaml
+  # - ./manifests/vmscrape/haproxy.yaml
+  # - ./manifests/vmscrape/netdata.yaml
+  # - ./manifests/vmscrape/kuma.yaml
  # - ./manifests/vmscrape/istio.yaml
  # - ./manifests/vmsingle/influx.yaml
 generators:
   - ./manifests/secrets/secret-generator.yaml
 
-helmCharts:
-  - name: victoria-metrics-k8s-stack
-    releaseName: victoria-metrics-k8s-stack
-    namespace: monitoring
-    repo: https://victoriametrics.github.io/helm-charts/
-    version: "0.45.0"
-    valuesFile: values.yaml
+# helmCharts:
+#   - name: victoria-metrics-k8s-stack
+#     releaseName: victoria-metrics-k8s-stack
+#     namespace: monitoring
+#     repo: https://victoriametrics.github.io/helm-charts/
+#     version: "0.45.0"
+#     valuesFile: values.yaml
